--- a/index.html
+++ b/index.html
@@ -78,9 +78,239 @@
   </main>
   <!-- end of main -->
 
+  <!-- top products -->
+  <section class="top-products">
+    <h2 class="top-products__header">
+      ტოპ პროდუქცია
+    </h2>
+    <div class="top-products__link"><a href="#">ყველას ნახვა</a></div>
+
+    <!-- top products swiper -->
+    <div class="swiper-container top-products__swiper">
+      <div class="swiper-wrapper top-products__wrapper">
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+        <div class="swiper-slide  top-products__slide">
+          <div class="card">
+            <div class="card__image">
+              <img src="./assets/img/Rectangle_223.png" alt="">
+            </div>
+            <div class="card__details">
+              <div class="card__heading">
+                <p class="card__title">ელ. ჩაქუჩი <span>GBH 5-40 D</span> </p>
+                <p class="card__id">#0611269020</p>
+              </div>
+              <div class="card__price">
+                <p class="card__price-real">22.50 ₾</p>
+                <p class="card__price-sale">22.50 ₾</p>
+              </div>
+            </div>
+            <a href="#" class="btn card__btn--1">
+              <img class="btn__icon" src="./assets/img/shopping-cart.svg" alt="Shoping Cart Icon">
+              <span class="btn__caption">დამატება</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- Add Arrows -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+  </section>
+  <!-- end of top products section -->
+
+
   <!-- Swiper JS -->
   <script src="./scripts/swiper-bundle.min.js"></script>
   <script src="./scripts/swipers/main-swiper.js"></script>
+  <script src="./scripts/swipers/top-products-swiper.js"></script>
 </body>
 
 </html>
