--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
         </div>
       </div>
       <!-- Add Arrows -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next top-products__button-next"></div>
+      <div class="swiper-button-prev top-products__button-prev"></div>
     </div>
   </section>
   <!-- end of top products section -->
