--- a/index.html
+++ b/index.html
@@ -331,6 +331,24 @@
   </section>
   <!-- end of top products section -->
 
+  <!-- delivery service info section-->
+  <section class="section-about">
+    <div class="section-about__logo">
+      <img src="./assets/img/delivery-service-logo.svg" alt="delivery service logo">
+    </div>
+    <div class="section-about__caption">
+      <h2 class="heading-primary">მიტანის სერვისი</h2>
+      <p class="paragraph">
+        საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა
+        მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა. მისი ტექსტი არამარტო 5 საუკუნის მანძილზე შემორჩა,
+        არამედ მან დღემდე, ელექტრონული ტიპოგრაფიის დრომდეც უცვლელად მოაღწია. განსაკუთრებული პოპულარობა მას 1960-იან
+        წლებში გამოსულმა Letraset-ის ცნობილმა ტრაფარეტებმა მოუტანა, უფრო მოგვიანებით კი — Aldus PageMaker-ის ტიპის
+        საგამომცემლო პროგრამებმა, რომლებშიც Lorem Ipsum-ის სხვადასხვა ვერსიები იყო ჩაშენებული.
+      </p>
+    </div>
+  </section>
+  <!-- end of delivery service info section -->
+
   <!-- Swiper JS -->
   <script src="./scripts/swiper-bundle.min.js"></script>
   <script src="./scripts/swipers/main-swiper.js"></script>
