--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <img src="./assets/img/delivery-service-logo.svg" alt="delivery service logo">
     </div>
     <div class="section-about__caption">
-      <h2 class="heading-primary">მიტანის სერვისი</h2>
+      <h2 class="heading-primary u-margin-bottom-medium">მიტანის სერვისი</h2>
       <p class="paragraph">
         საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა
         მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა. მისი ტექსტი არამარტო 5 საუკუნის მანძილზე შემორჩა,
@@ -348,6 +348,32 @@
     </div>
   </section>
   <!-- end of delivery service info section -->
+
+  <footer class="footer">
+    <div class="footer__top">
+      <div class="footer__logo">
+        <img src="./assets/img/Logo.svg" alt="">
+      </div>
+      <nav class="footer__nav">
+        <a href="#" class="footer__links">მთავარი</a>
+        <a href="#" class="footer__links">ჩვენ შესახებ</a>
+        <a href="#" class="footer__links">წესები და პირობები</a>
+        <a href="#" class="footer__links">მიტანის სერვისი</a>
+        <a href="#" class="footer__links">კონტაქტი</a>
+      </nav>
+      <div class="footer__socials">
+        <a href="#" class="footer__socials-link"><img src="./assets/img/facebook.svg" alt="facebook icon"
+            class="footer__socials-icon"></a>
+        <a href="#" class="footer__socials-link"><img src="./assets/img/instagram-alt.svg" alt="instagram icon"
+            class="footer__socials-icon"></a>
+        <a href="#" class="footer__socials-link"><img src="./assets/img/twitter.svg" alt="twitter icon"
+            class="footer__socials-icon"></a>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      hello
+    </div>
+  </footer>
 
   <!-- Swiper JS -->
   <script src="./scripts/swiper-bundle.min.js"></script>
