--- a/index.html
+++ b/index.html
@@ -305,25 +305,23 @@
         <!-- Add Arrows -->
         <div class="top-products__slider-arrows">
           <div class="swiper-button-next top-products__button-next">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-              <g>
-                <g>
-                  <path fill="#ff613b"
-                    d="M17.887 8.43a1.498 1.498 0 0 0-.315-.495L10.07.44a1.508 1.508 0 0 0-2.13 0 1.504 1.504 0 0 0 0 2.128L12.89 7.5H1.5a1.5 1.5 0 1 0 0 2.998h11.39l-4.952 4.93a1.498 1.498 0 0 0 0 2.129 1.502 1.502 0 0 0 2.131 0l7.503-7.494c.137-.143.244-.31.315-.495.15-.365.15-.774 0-1.139z" />
-                </g>
-              </g>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>arrow-right2</title>
+              <path fill="#ff613b"
+                d="M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0s-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z">
+              </path>
             </svg>
+
           </div>
 
           <div class="swiper-button-prev top-products__button-prev">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-              <g>
-                <g>
-                  <path fill="#fec0b0"
-                    d="M.113 8.43c.071-.185.178-.353.315-.495L7.93.44a1.508 1.508 0 0 1 2.13 0c.59.588.59 1.54 0 2.128L5.11 7.5H16.5a1.5 1.5 0 1 1 0 2.998H5.11l4.952 4.93a1.498 1.498 0 0 1 0 2.129 1.502 1.502 0 0 1-2.131 0L.428 10.063a1.499 1.499 0 0 1-.315-.495 1.497 1.497 0 0 1 0-1.139z" />
-                </g>
-              </g>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>arrow-left2</title>
+              <path fill="#ff613b"
+                d="M12.586 27.414l-10-10c-0.781-0.781-0.781-2.047 0-2.828l10-10c0.781-0.781 2.047-0.781 2.828 0s0.781 2.047 0 2.828l-6.586 6.586h19.172c1.105 0 2 0.895 2 2s-0.895 2-2 2h-19.172l6.586 6.586c0.39 0.39 0.586 0.902 0.586 1.414s-0.195 1.024-0.586 1.414c-0.781 0.781-2.047 0.781-2.828 0z">
+              </path>
             </svg>
+
           </div>
         </div>
       </div>
@@ -349,31 +347,65 @@
   </section>
   <!-- end of delivery service info section -->
 
+  <!-- footer section -->
   <footer class="footer">
-    <div class="footer__top">
-      <div class="footer__logo">
-        <img src="./assets/img/Logo.svg" alt="">
+    <div class="footer__wrapper">
+      <div class="footer__top">
+        <div class="footer__logo">
+          <img src="./assets/img/Logo.svg" alt="titan logo">
+        </div>
+
+        <nav class="footer__nav">
+          <a href="#" class="footer__links">მთავარი</a>
+          <a href="#" class="footer__links">ჩვენ შესახებ</a>
+          <a href="#" class="footer__links">წესები და პირობები</a>
+          <a href="#" class="footer__links">მიტანის სერვისი</a>
+          <a href="#" class="footer__links">კონტაქტი</a>
+        </nav>
+
+        <div class="footer__socials">
+          <a href="#" class="footer__socials-link">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>facebook</title>
+              <path fill="#d0d0d0"
+                d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h13v-14h-4v-4h4v-2c0-3.306 2.694-6 6-6h4v4h-4c-1.1 0-2 0.9-2 2v2h6l-1 4h-5v14h9c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3z">
+              </path>
+            </svg>
+          </a>
+          <a href="#" class="footer__socials-link">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>instagram</title>
+              <path fill="#d0d0d0"
+                d="M16 2.881c4.275 0 4.781 0.019 6.462 0.094 1.563 0.069 2.406 0.331 2.969 0.55 0.744 0.288 1.281 0.638 1.837 1.194 0.563 0.563 0.906 1.094 1.2 1.838 0.219 0.563 0.481 1.412 0.55 2.969 0.075 1.688 0.094 2.194 0.094 6.463s-0.019 4.781-0.094 6.463c-0.069 1.563-0.331 2.406-0.55 2.969-0.288 0.744-0.637 1.281-1.194 1.837-0.563 0.563-1.094 0.906-1.837 1.2-0.563 0.219-1.413 0.481-2.969 0.55-1.688 0.075-2.194 0.094-6.463 0.094s-4.781-0.019-6.463-0.094c-1.563-0.069-2.406-0.331-2.969-0.55-0.744-0.288-1.281-0.637-1.838-1.194-0.563-0.563-0.906-1.094-1.2-1.837-0.219-0.563-0.481-1.413-0.55-2.969-0.075-1.688-0.094-2.194-0.094-6.463s0.019-4.781 0.094-6.463c0.069-1.563 0.331-2.406 0.55-2.969 0.288-0.744 0.638-1.281 1.194-1.838 0.563-0.563 1.094-0.906 1.838-1.2 0.563-0.219 1.412-0.481 2.969-0.55 1.681-0.075 2.188-0.094 6.463-0.094zM16 0c-4.344 0-4.887 0.019-6.594 0.094-1.7 0.075-2.869 0.35-3.881 0.744-1.056 0.412-1.95 0.956-2.837 1.85-0.894 0.888-1.438 1.781-1.85 2.831-0.394 1.019-0.669 2.181-0.744 3.881-0.075 1.713-0.094 2.256-0.094 6.6s0.019 4.887 0.094 6.594c0.075 1.7 0.35 2.869 0.744 3.881 0.413 1.056 0.956 1.95 1.85 2.837 0.887 0.887 1.781 1.438 2.831 1.844 1.019 0.394 2.181 0.669 3.881 0.744 1.706 0.075 2.25 0.094 6.594 0.094s4.888-0.019 6.594-0.094c1.7-0.075 2.869-0.35 3.881-0.744 1.050-0.406 1.944-0.956 2.831-1.844s1.438-1.781 1.844-2.831c0.394-1.019 0.669-2.181 0.744-3.881 0.075-1.706 0.094-2.25 0.094-6.594s-0.019-4.887-0.094-6.594c-0.075-1.7-0.35-2.869-0.744-3.881-0.394-1.063-0.938-1.956-1.831-2.844-0.887-0.887-1.781-1.438-2.831-1.844-1.019-0.394-2.181-0.669-3.881-0.744-1.712-0.081-2.256-0.1-6.6-0.1v0z">
+              </path>
+              <path fill="#d0d0d0"
+                d="M16 7.781c-4.537 0-8.219 3.681-8.219 8.219s3.681 8.219 8.219 8.219 8.219-3.681 8.219-8.219c0-4.537-3.681-8.219-8.219-8.219zM16 21.331c-2.944 0-5.331-2.387-5.331-5.331s2.387-5.331 5.331-5.331c2.944 0 5.331 2.387 5.331 5.331s-2.387 5.331-5.331 5.331z">
+              </path>
+              <path fill="#d0d0d0"
+                d="M26.462 7.456c0 1.060-0.859 1.919-1.919 1.919s-1.919-0.859-1.919-1.919c0-1.060 0.859-1.919 1.919-1.919s1.919 0.859 1.919 1.919z">
+              </path>
+            </svg>
+          </a>
+          <a href="#" class="footer__socials-link">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>twitter</title>
+              <path fill="#d0d0d0"
+                d="M32 7.075c-1.175 0.525-2.444 0.875-3.769 1.031 1.356-0.813 2.394-2.1 2.887-3.631-1.269 0.75-2.675 1.3-4.169 1.594-1.2-1.275-2.906-2.069-4.794-2.069-3.625 0-6.563 2.938-6.563 6.563 0 0.512 0.056 1.012 0.169 1.494-5.456-0.275-10.294-2.888-13.531-6.862-0.563 0.969-0.887 2.1-0.887 3.3 0 2.275 1.156 4.287 2.919 5.463-1.075-0.031-2.087-0.331-2.975-0.819 0 0.025 0 0.056 0 0.081 0 3.181 2.263 5.838 5.269 6.437-0.55 0.15-1.131 0.231-1.731 0.231-0.425 0-0.831-0.044-1.237-0.119 0.838 2.606 3.263 4.506 6.131 4.563-2.25 1.762-5.075 2.813-8.156 2.813-0.531 0-1.050-0.031-1.569-0.094 2.913 1.869 6.362 2.95 10.069 2.95 12.075 0 18.681-10.006 18.681-18.681 0-0.287-0.006-0.569-0.019-0.85 1.281-0.919 2.394-2.075 3.275-3.394z">
+              </path>
+            </svg>
+          </a>
+        </div>
       </div>
-      <nav class="footer__nav">
-        <a href="#" class="footer__links">მთავარი</a>
-        <a href="#" class="footer__links">ჩვენ შესახებ</a>
-        <a href="#" class="footer__links">წესები და პირობები</a>
-        <a href="#" class="footer__links">მიტანის სერვისი</a>
-        <a href="#" class="footer__links">კონტაქტი</a>
-      </nav>
-      <div class="footer__socials">
-        <a href="#" class="footer__socials-link"><img src="./assets/img/facebook.svg" alt="facebook icon"
-            class="footer__socials-icon"></a>
-        <a href="#" class="footer__socials-link"><img src="./assets/img/instagram-alt.svg" alt="instagram icon"
-            class="footer__socials-icon"></a>
-        <a href="#" class="footer__socials-link"><img src="./assets/img/twitter.svg" alt="twitter icon"
-            class="footer__socials-icon"></a>
+      <div class="footer__bottom">
+        <p class="paragraph">ყველა ყფლება დაცულია</p>
+        <p class="paragraph">დამზადებულია <span>Smartweb</span> -ში</p>
       </div>
-    </div>
-    <div class="footer__bottom">
-      hello
     </div>
   </footer>
+  <!-- end of footer section -->
+
+  <!--  -->
+
 
   <!-- Swiper JS -->
   <script src="./scripts/swiper-bundle.min.js"></script>
