--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- main -->
   <main class="main">
-    <aside class="main__menu">
+    <div class="main__menu">
       <ul class="main__menu-layout">
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">თამაშირ მუყაო</a></li>
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">კერამიკული ფილები</a></li>
@@ -59,14 +59,20 @@
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">სამონტაჟო ჭერი</a></li>
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">მშენებლობა</a></li>
       </ul>
-    </aside>
+    </div>
 
     <!-- main swiper -->
     <div class="swiper-container main__swiper">
       <div class="swiper-wrapper main__swiper--wrapper">
-        <div class="swiper-slide main__swiper--slide"></div>
-        <div class="swiper-slide main__swiper--slide">Slide 2</div>
-        <div class="swiper-slide main__swiper--slide">Slide 3</div>
+        <div class="swiper-slide main__swiper--slide">
+          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+        </div>
+        <div class="swiper-slide main__swiper--slide">
+          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+        </div>
+        <div class="swiper-slide main__swiper--slide">
+          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+        </div>
       </div>
       <!-- Add Arrows -->
       <div class="swiper-button-next main__swiper--button-next"></div>
@@ -351,7 +357,7 @@
   <footer class="footer">
     <div class="footer__wrapper">
       <div class="footer__top">
-        <div class="footer__logo">
+        <div class="footer__logo-box">
           <img src="./assets/img/Logo.svg" alt="titan logo">
         </div>
 
@@ -404,7 +410,62 @@
   </footer>
   <!-- end of footer section -->
 
-  <!--  -->
+  <!-- responsive menu vp <= 600px -->
+  <div class="menu">
+    <div class="menu__wrapper">
+      <div class="menu__logo-box">
+        <a href="index.html"><img src="./assets/img/Logo.svg" alt="titan logo"></a>
+      </div>
+
+      <nav class="menu__nav">
+        <div class="menu__category">
+          <a href="#">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <title>menu1</title>
+              <path fill="#d0d0d0"
+                d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="menu__search">
+          <a href="#">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <title>search</title>
+              <path fill="#d0d0d0"
+                d="M12.9 14.32c-1.34 1.049-3.050 1.682-4.908 1.682-4.418 0-8-3.582-8-8s3.582-8 8-8c4.418 0 8 3.582 8 8 0 1.858-0.633 3.567-1.695 4.925l0.013-0.018 5.35 5.33-1.42 1.42-5.33-5.34zM8 14c3.314 0 6-2.686 6-6s-2.686-6-6-6v0c-3.314 0-6 2.686-6 6s2.686 6 6 6v0z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="menu__cart">
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+              <g>
+                <g>
+                  <path fill="#d0d0d0"
+                    d="M15.611 16.579c0 .785-.634 1.421-1.417 1.421a1.419 1.419 0 0 1-1.416-1.421c0-.785.634-1.421 1.416-1.421.783 0 1.417.636 1.417 1.42zM5.531 3.789l1.107 3.892.241.845h6.363a.95.95 0 0 0 .908-.687l1.154-4.05zm11.025 8.527c.521 0 .944.424.944.947a.946.946 0 0 1-.944.948H5.222a2.837 2.837 0 0 1-2.829-2.69 2.84 2.84 0 0 1 2.526-2.979l-1.55-5.44v-.004l-.146-.516a.95.95 0 0 0-.908-.687h-.87A.946.946 0 0 1 .5.947C.5.424.923 0 1.444 0h.87a2.84 2.84 0 0 1 2.662 1.895h11.58a.95.95 0 0 1 .908 1.208L15.966 8.36a2.847 2.847 0 0 1-2.724 2.061h-8.02a.946.946 0 0 0-.944.947c0 .524.423.948.944.948h11.334zm-8.5 4.263c0 .785-.635 1.421-1.417 1.421a1.419 1.419 0 0 1-1.417-1.421c0-.785.634-1.421 1.417-1.421.782 0 1.417.636 1.417 1.42z" />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </div>
+        <div class="menu__user">
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+              <g>
+                <g>
+                  <path fill="#fff"
+                    d="M8.987 9C6.989 9 5.369 7.389 5.369 5.402c0-1.987 1.62-3.598 3.618-3.598 1.998 0 3.617 1.61 3.617 3.598C12.604 7.389 10.984 9 8.987 9zm3.355.638a5.379 5.379 0 0 0 1.773-6.007A5.425 5.425 0 0 0 8.987 0a5.425 5.425 0 0 0-5.128 3.631A5.379 5.379 0 0 0 5.63 9.638a9.002 9.002 0 0 0-5.625 7.358.906.906 0 0 0 .804.999.909.909 0 0 0 1.004-.801c.412-3.64 3.507-6.393 7.19-6.393 3.684 0 6.78 2.753 7.191 6.393.05.458.441.803.904.8h.1a.9.9 0 0 0 .796-.989 9.002 9.002 0 0 0-5.653-7.367z" />
+                </g>
+              </g>
+            </svg>
+          </a>
+        </div>
+      </nav>
+
+    </div>
+  </div>
 
 
   <!-- Swiper JS -->
