--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <form action="#" class="search">
-      <input class="search__input" type="text" name="search" placeholder="მოძებნე მარტივად">
+      <input class="search__input u-border-md" type="text" name="search" placeholder="მოძებნე მარტივად">
       <a class="search__button">
         <svg class="search__icon">
           <use href="./assets/img/sprite.svg#icon-search" />
@@ -91,7 +91,7 @@
         <h2 class="top-products__title">
           ტოპ პროდუქცია
         </h2>
-        <div class="top-products__link"><a href="#">ყველას ნახვა</a></div>
+        <div class="top-products__link"><a href="products.page.html">ყველას ნახვა</a></div>
       </div>
 
       <!-- top products swiper -->
