--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
     <div class="footer__wrapper">
       <div class="footer__top">
         <div class="footer__logo-box">
-          <img src="./assets/img/Logo.svg" alt="titan logo">
+          <a href="index.html"><img src="./assets/img/Logo.svg" alt="titan logo"></a>
         </div>
 
         <nav class="footer__nav">
-          <a href="#" class="footer__links">მთავარი</a>
-          <a href="#" class="footer__links">ჩვენ შესახებ</a>
+          <a href="index.html" class="footer__links">მთავარი</a>
+          <a href="about.us.html" class="footer__links">ჩვენ შესახებ</a>
           <a href="#" class="footer__links">წესები და პირობები</a>
           <a href="#" class="footer__links">მიტანის სერვისი</a>
           <a href="#" class="footer__links">კონტაქტი</a>
