--- a/products.page.html
+++ b/products.page.html
@@ -46,7 +46,7 @@
   <!-- main content -->
   <section class="products u-border-md">
     <div class="products__header">
-      <h1 class="heading-secondary products__header-title">ელექტრონიკა</h1>
+      <h1 class="heading-secondary">ელექტრონიკა</h1>
     </div>
     <ul class="breadcrumbs">
       <li class="breadcrumbs__item"><a href=index.html class="breadcrumbs__link">
@@ -383,12 +383,12 @@
     <div class="footer__wrapper">
       <div class="footer__top">
         <div class="footer__logo-box">
-          <img src="./assets/img/Logo.svg" alt="titan logo">
+          <a href="index.html"><img src="./assets/img/Logo.svg" alt="titan logo"></a>
         </div>
 
         <nav class="footer__nav">
-          <a href="#" class="footer__links">მთავარი</a>
-          <a href="#" class="footer__links">ჩვენ შესახებ</a>
+          <a href="index.html" class="footer__links">მთავარი</a>
+          <a href="about.us.html" class="footer__links">ჩვენ შესახებ</a>
           <a href="#" class="footer__links">წესები და პირობები</a>
           <a href="#" class="footer__links">მიტანის სერვისი</a>
           <a href="#" class="footer__links">კონტაქტი</a>
