--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     </div>
 
     <div class="header__menu">
-      <img class="header__menu-icon" src="./assets/img/icons8-menu.svg" alt="Burger Icon">
+      <a href='#' class="header__menu-icon">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <title>menu1</title>
+          <path fill="#d0d0d0"
+            d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
+          </path>
+        </svg>
+      </a>
       <div class="header__menu-text">ყველა კატეგორია</div>
     </div>
 
@@ -364,7 +371,7 @@
         <nav class="footer__nav">
           <a href="index.html" class="footer__links">მთავარი</a>
           <a href="about.us.html" class="footer__links">ჩვენ შესახებ</a>
-          <a href="#" class="footer__links">წესები და პირობები</a>
+          <a href="t&c.html" class="footer__links">წესები და პირობები</a>
           <a href="#" class="footer__links">მიტანის სერვისი</a>
           <a href="#" class="footer__links">კონტაქტი</a>
         </nav>
