--- a/t&c.html
+++ b/t&c.html
@@ -16,43 +16,88 @@
     </div>
 
     <div class="header__menu">
-      <a href='#' class="header__menu-icon">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <title>menu1</title>
-          <path fill="#d0d0d0"
-            d="M3 13h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 7h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1zM3 19h18c0.552 0 1-0.448 1-1s-0.448-1-1-1h-18c-0.552 0-1 0.448-1 1s0.448 1 1 1z">
-          </path>
-        </svg>
-      </a>
+      <div class="header__menu-btn" id="header__menu-btn">
+        <span class="header__menu-burger"></span>
+      </div>
       <div class="header__menu-text">ყველა კატეგორია</div>
     </div>
 
     <form action="#" class="search">
       <input class="search__input" type="text" name="search" placeholder="მოძებნე მარტივად">
       <a class="search__button">
-        <svg class="search__icon">
-          <use href="./assets/img/sprite.svg#icon-search" />
-          </use>
+        <svg class="search__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          viewBox="0 0 24 24">
+          <title>search</title>
+          <path fill="#fff"
+            d="M16.041 15.856c-0.034 0.026-0.067 0.055-0.099 0.087s-0.060 0.064-0.087 0.099c-1.258 1.213-2.969 1.958-4.855 1.958-1.933 0-3.682-0.782-4.95-2.050s-2.050-3.017-2.050-4.95 0.782-3.682 2.050-4.95 3.017-2.050 4.95-2.050 3.682 0.782 4.95 2.050 2.050 3.017 2.050 4.95c0 1.886-0.745 3.597-1.959 4.856zM21.707 20.293l-3.675-3.675c1.231-1.54 1.968-3.493 1.968-5.618 0-2.485-1.008-4.736-2.636-6.364s-3.879-2.636-6.364-2.636-4.736 1.008-6.364 2.636-2.636 3.879-2.636 6.364 1.008 4.736 2.636 6.364 3.879 2.636 6.364 2.636c2.125 0 4.078-0.737 5.618-1.968l3.675 3.675c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414z">
+          </path>
         </svg>
       </a>
     </form>
 
     <div class="cart">
-      <img class="cart__icon" src="./assets/img/shopping-cart.svg" alt="Shopping Cart">
-      <p class="cart__item-count"><span id="item-count">0</span></p>
+      <svg class="cart__icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+        <g>
+          <g>
+            <path fill="#fff"
+              d="M15.611 16.579c0 .785-.634 1.421-1.417 1.421a1.419 1.419 0 0 1-1.416-1.421c0-.785.634-1.421 1.416-1.421.783 0 1.417.636 1.417 1.42zM5.531 3.789l1.107 3.892.241.845h6.363a.95.95 0 0 0 .908-.687l1.154-4.05zm11.025 8.527c.521 0 .944.424.944.947a.946.946 0 0 1-.944.948H5.222a2.837 2.837 0 0 1-2.829-2.69 2.84 2.84 0 0 1 2.526-2.979l-1.55-5.44v-.004l-.146-.516a.95.95 0 0 0-.908-.687h-.87A.946.946 0 0 1 .5.947C.5.424.923 0 1.444 0h.87a2.84 2.84 0 0 1 2.662 1.895h11.58a.95.95 0 0 1 .908 1.208L15.966 8.36a2.847 2.847 0 0 1-2.724 2.061h-8.02a.946.946 0 0 0-.944.947c0 .524.423.948.944.948h11.334zm-8.5 4.263c0 .785-.635 1.421-1.417 1.421a1.419 1.419 0 0 1-1.417-1.421c0-.785.634-1.421 1.417-1.421.782 0 1.417.636 1.417 1.42z" />
+          </g>
+        </g>
+      </svg>
+      <div class="cart__items">0</div>
     </div>
 
     <div class="auth">
-      <img class="auth__icon" src="./assets/img/user.svg" alt="User Icon">
+      <svg class="auth__icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+        <g>
+          <g>
+            <path fill="#fff"
+              d="M8.987 9C6.989 9 5.369 7.389 5.369 5.402c0-1.987 1.62-3.598 3.618-3.598 1.998 0 3.617 1.61 3.617 3.598C12.604 7.389 10.984 9 8.987 9zm3.355.638a5.379 5.379 0 0 0 1.773-6.007A5.425 5.425 0 0 0 8.987 0a5.425 5.425 0 0 0-5.128 3.631A5.379 5.379 0 0 0 5.63 9.638a9.002 9.002 0 0 0-5.625 7.358.906.906 0 0 0 .804.999.909.909 0 0 0 1.004-.801c.412-3.64 3.507-6.393 7.19-6.393 3.684 0 6.78 2.753 7.191 6.393.05.458.441.803.904.8h.1a.9.9 0 0 0 .796-.989 9.002 9.002 0 0 0-5.653-7.367z" />
+          </g>
+        </g>
+      </svg>
       <p class="auth__text">ავტორიზაცია</p>
     </div>
   </header>
   <!-- end of header -->
 
+  <div class="drop-down" id="drop-down">
+
+    <div class="drop-down__wrapper">
+
+      <div class="drop-down__top">
+        <nav class="drop-down__top-menu">
+          <a href="index.html" class="drop-down__link">მთავარი</a>
+          <a href="about.us.html" class="drop-down__link">ჩვენ შესახებ</a>
+          <a href="t&c.html" class="drop-down__link">წესები და პირობები</a>
+          <a href="#" class="drop-down__link">მიტანის სერვისი</a>
+          <a href="#" class="drop-down__link">კონტაქტი</a>
+        </nav>
+      </div>
+
+      <div class="drop-down__bottom">
+        <nav class="drop-down__bottom-menu">
+          <a href="#" class="drop-down__link">თამაშირ მუყაო</a>
+          <a href="#" class="drop-down__link">კერამიკული ფილები</a>
+          <a href="#" class="drop-down__link">იატაკი</a>
+          <a href="#" class="drop-down__link">სამღებრო</a>
+          <a href="#" class="drop-down__link">ხელსაწყოები</a>
+          <a href="#" class="drop-down__link">კარი</a>
+          <a href="#" class="drop-down__link">ელექტროობა</a>
+          <a href="#" class="drop-down__link">შპალერი და დეკორი</a>
+          <a href="#" class="drop-down__link">სანტექნიკა</a>
+          <a href="#" class="drop-down__link">სამონტაჟო ჭერი</a>
+          <a href="#" class="drop-down__link">მშენებლობა</a>
+        </nav>
+      </div>
+
+    </div>
+  </div>
+
   <!-- Terms and Conditions -->
   <section class="terms-conditions">
     <div class="terms-conditions__header">
-      <h2 class="heading-secondary">ჩვენს შესახებ</h2>
+      <h2 class="heading-secondary">წესები და პირობები</h2>
     </div>
     <ul class="breadcrumbs">
       <li class="breadcrumbs__item"><a href=index.html class="breadcrumbs__link">
@@ -202,6 +247,9 @@
     </div>
   </div>
 
+
+  <!-- scripts -->
+  <script src="./scripts/app.js"></script>
 </body>
 
 </html>
