--- a/products.page.html
+++ b/products.page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Titan | Products</title>
 </head>
 
 <body>
@@ -95,7 +95,8 @@
   </div>
 
   <!-- main content -->
-  <section class="products u-border-md">
+  <section class="products">
+    <div></div>
     <div class="products__header">
       <h1 class="heading-secondary">ელექტრონიკა</h1>
     </div>
