--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
     <div class="swiper-container main__swiper">
       <div class="swiper-wrapper main__swiper--wrapper">
         <div class="swiper-slide main__swiper--slide">
-          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+          <img src="../assets/img/Rectangle 218.jpg" alt="">
         </div>
         <div class="swiper-slide main__swiper--slide">
-          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+          <img src="../assets/img/Rectangle 218.jpg" alt="">
         </div>
         <div class="swiper-slide main__swiper--slide">
-          <img src="../assets/img/Rectangle_218@4x.webp" alt="">
+          <img src="../assets/img/Rectangle 218.jpg" alt="">
         </div>
       </div>
       <!-- Add Arrows -->
