--- a/about.us.html
+++ b/about.us.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Titan | Info</title>
 </head>
@@ -62,9 +61,10 @@
   </header>
   <!-- end of header -->
 
+  <!-- header drop-down menu -->
   <div class="drop-down" id="drop-down">
 
-    <div class="drop-down__wrapper">
+    <div class="drop-down__wrapper link">
 
       <div class="drop-down__top">
         <nav class="drop-down__top-menu">
@@ -77,7 +77,7 @@
       </div>
 
       <div class="drop-down__bottom">
-        <nav class="drop-down__bottom-menu">
+        <nav class="drop-down__bottom-menu link">
           <a href="#" class="drop-down__link">თამაშირ მუყაო</a>
           <a href="#" class="drop-down__link">კერამიკული ფილები</a>
           <a href="#" class="drop-down__link">იატაკი</a>
@@ -94,16 +94,17 @@
 
     </div>
   </div>
+  <!-- end of header drop-down menu -->
 
   <section class="about-us">
     <div class="about-us__header">
       <h2 class="heading-secondary">ჩვენს შესახებ</h2>
     </div>
     <ul class="breadcrumbs">
-      <li class="breadcrumbs__item"><a href=index.html class="breadcrumbs__link">
+      <li class="breadcrumbs__item"><a href=index.html class="breadcrumbs__link link">
           მთავარი
         </a></li>
-      <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__link--active">
+      <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link link breadcrumbs__link--active">
           ჩვენს შესახებ
         </a></li>
     </ul>
@@ -151,7 +152,7 @@
         </nav>
 
         <div class="footer__socials">
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.facebook.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>facebook</title>
               <path fill="#d0d0d0"
@@ -159,7 +160,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.instagram.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>instagram</title>
               <path fill="#d0d0d0"
@@ -173,7 +174,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.twitter.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>twitter</title>
               <path fill="#d0d0d0"
@@ -185,7 +186,7 @@
       </div>
       <div class="footer__bottom">
         <p class="paragraph">ყველა ყფლება დაცულია</p>
-        <p class="paragraph">დამზადებულია <span>Smartweb</span> -ში</p>
+        <p class="paragraph">დამზადებულია <a href="https://smartweb.ge/" target="_blank">Smartweb</a> -ში</p>
       </div>
     </div>
   </footer>
@@ -250,11 +251,6 @@
 
   <!-- scripts -->
   <script src="./scripts/app.js"></script>
-
-  <!-- Swiper JS -->
-  <script src="./scripts/swiper-bundle.min.js"></script>
-  <script src="./scripts/swipers/main-swiper.js"></script>
-  <script src="./scripts/swipers/top-products-swiper.js"></script>
 </body>
 
 </html>
