--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- header drop-down menu -->
   <div class="drop-down" id="drop-down">
 
-    <div class="drop-down__wrapper">
+    <div class="drop-down__wrapper link">
 
       <div class="drop-down__top">
         <nav class="drop-down__top-menu">
@@ -78,7 +78,7 @@
       </div>
 
       <div class="drop-down__bottom">
-        <nav class="drop-down__bottom-menu">
+        <nav class="drop-down__bottom-menu link">
           <a href="#" class="drop-down__link">თამაშირ მუყაო</a>
           <a href="#" class="drop-down__link">კერამიკული ფილები</a>
           <a href="#" class="drop-down__link">იატაკი</a>
@@ -100,7 +100,7 @@
   <!-- main -->
   <main class="main">
     <div class="main__menu">
-      <ul class="main__menu-layout">
+      <ul class="main__menu-layout link">
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">თამაშირ მუყაო</a></li>
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">კერამიკული ფილები</a></li>
         <li class="main__menu-layout-unit"><a href="#" class="main__menu-layout-item">იატაკი</a></li>
@@ -145,7 +145,7 @@
       <h2 class="top-products__title heading-secondary">
         ტოპ პროდუქცია
       </h2>
-      <div class="top-products__link"><a href="products.page.html">ყველას ნახვა</a></div>
+      <div class="top-products__link"><a class="link" href="products.page.html">ყველას ნახვა</a></div>
     </div>
 
     <!-- top products swiper -->
@@ -412,7 +412,6 @@
           </div>
         </div>
       </div>
-
     </div>
     <!-- Add Arrows -->
     <div class="top-products__slider-arrows">
@@ -446,7 +445,7 @@
       <img src="./assets/img/delivery-service-logo.svg" alt="delivery service logo">
     </div>
     <div class="section-about__caption">
-      <h2 class="heading-primary u-margin-bottom-medium">მიტანის სერვისი</h2>
+      <h2 class="section-about__title heading-primary">მიტანის სერვისი</h2>
       <p class="paragraph">
         საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა
         მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა. მისი ტექსტი არამარტო 5 საუკუნის მანძილზე შემორჩა,
@@ -475,7 +474,7 @@
         </nav>
 
         <div class="footer__socials">
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.facebook.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>facebook</title>
               <path fill="#d0d0d0"
@@ -483,7 +482,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.instagram.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>instagram</title>
               <path fill="#d0d0d0"
@@ -497,7 +496,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.twitter.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>twitter</title>
               <path fill="#d0d0d0"
@@ -509,7 +508,7 @@
       </div>
       <div class="footer__bottom">
         <p class="paragraph">ყველა ყფლება დაცულია</p>
-        <p class="paragraph">დამზადებულია <span>Smartweb</span> -ში</p>
+        <p class="paragraph">დამზადებულია <a href="https://smartweb.ge/" target="_blank">Smartweb</a> -ში</p>
       </div>
     </div>
   </footer>
