--- a/products.page.html
+++ b/products.page.html
@@ -61,9 +61,10 @@
   </header>
   <!-- end of header -->
 
+  <!-- header drop-down menu -->
   <div class="drop-down" id="drop-down">
 
-    <div class="drop-down__wrapper">
+    <div class="drop-down__wrapper link">
 
       <div class="drop-down__top">
         <nav class="drop-down__top-menu">
@@ -76,7 +77,7 @@
       </div>
 
       <div class="drop-down__bottom">
-        <nav class="drop-down__bottom-menu">
+        <nav class="drop-down__bottom-menu link">
           <a href="#" class="drop-down__link">თამაშირ მუყაო</a>
           <a href="#" class="drop-down__link">კერამიკული ფილები</a>
           <a href="#" class="drop-down__link">იატაკი</a>
@@ -93,6 +94,7 @@
 
     </div>
   </div>
+  <!-- end of header drop-down menu -->
 
   <!-- main content -->
   <section class="products">
@@ -101,13 +103,13 @@
       <h1 class="heading-secondary">ელექტრონიკა</h1>
     </div>
     <ul class="breadcrumbs">
-      <li class="breadcrumbs__item"><a href=index.html class="breadcrumbs__link">
+      <li class="breadcrumbs__item link"><a href=index.html class="breadcrumbs__link">
           მთავარი
         </a></li>
-      <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">
+      <li class="breadcrumbs__item link"><a href="#" class="breadcrumbs__link">
           კატეგორია
         </a></li>
-      <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link breadcrumbs__link--active">
+      <li class="breadcrumbs__item link"><a href="#" class="breadcrumbs__link breadcrumbs__link--active">
           ქვეკატეგორია
         </a></li>
     </ul>
@@ -522,7 +524,7 @@
         </nav>
 
         <div class="footer__socials">
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.facebook.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>facebook</title>
               <path fill="#d0d0d0"
@@ -530,7 +532,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.instagram.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>instagram</title>
               <path fill="#d0d0d0"
@@ -544,7 +546,7 @@
               </path>
             </svg>
           </a>
-          <a href="#" class="footer__socials-link">
+          <a href="https://www.twitter.com/" target="_blank" class="footer__socials-link">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>twitter</title>
               <path fill="#d0d0d0"
@@ -556,7 +558,7 @@
       </div>
       <div class="footer__bottom">
         <p class="paragraph">ყველა ყფლება დაცულია</p>
-        <p class="paragraph">დამზადებულია <span>Smartweb</span> -ში</p>
+        <p class="paragraph">დამზადებულია <a href="https://smartweb.ge/" target="_blank">Smartweb</a> -ში</p>
       </div>
     </div>
   </footer>
